ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/ECS_verification__c.field-meta.xml
<CustomField>
    <fullName>ECS_verification__c</fullName>
    <label>ECS verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>