ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMI_Amount__c</fullName>
    <label>EMI Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>