ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Emp_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Reference_Id__c</fullName>
    <label>Emp Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>