ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Employee_Branch__c.field-meta.xml
<CustomField>
    <fullName>Employee_Branch__c</fullName>
    <label>Employee Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>