ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Entity_Category__c.field-meta.xml
<CustomField>
    <fullName>Entity_Category__c</fullName>
    <label>Entity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>SENP</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>