ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Entity_Code__c</fullName>
    <formula>CASE( Entity_Type__c , &apos;Pvt Ltd&apos; , &apos;11&apos; , &apos;Public Ltd&apos; , &apos;12&apos; , &apos;Business Entities Created by Statute&apos; , &apos;20&apos; , &apos;Proprietorship&apos; , &apos;30&apos; , &apos;Partnership&apos; , &apos;40&apos; , &apos;Limited Liability Partnership&apos;, &apos;40&apos; , &apos;Trust&apos; , &apos;50&apos; , &apos;HUF&apos; , &apos;55&apos; , &apos;Co-Operative Society&apos; , &apos;60&apos; , &apos;Assosiation of Persons&apos; , &apos;70&apos; , &apos;Govt&apos; , &apos;80&apos;, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Code</label>
    <type>Text</type>
</CustomField>