ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Public Ltd</fullName>
            </value>
            <value>
                <fullName>Business Entities Created by Statute</fullName>
            </value>
            <value>
                <fullName>Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>Co-Operative Society</fullName>
            </value>
            <value>
                <fullName>Assosiation of Persons</fullName>
            </value>
            <value>
                <fullName>Govt</fullName>
                <isActive>false</isActive>
                <label>Govt</label>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
                <isActive>false</isActive>
                <label>Limited Liability Partnership</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>