ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captive Retail</fullName>
            </value>
            <value>
                <fullName>Captive strategic</fullName>
            </value>
            <value>
                <fullName>Hiring FTU</fullName>
            </value>
            <value>
                <fullName>Hiring Retail</fullName>
            </value>
            <value>
                <fullName>Hiring Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>