ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Ex_showroom_price_carwale__c.field-meta.xml
<CustomField>
    <fullName>Ex_showroom_price_carwale__c</fullName>
    <label>Ex-showroom price carwale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>