ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Existing_Borrowers_Exposure_Amt__c.field-meta.xml
<CustomField>
    <fullName>Existing_Borrowers_Exposure_Amt__c</fullName>
    <label>Existing Borrowers Exposure Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>