ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Existing_Motor_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Existing_Motor_Insurance_Premium__c</fullName>
    <label>Existing Motor Insurance Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>