ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/FAME_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>FAME_Subsidy__c</fullName>
    <label>FAME Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>