ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/FOIR__c.field-meta.xml
<CustomField>
    <fullName>FOIR__c</fullName>
    <label>FOIR</label>
    <summarizedField>Applicant__c.FOIR__c</summarizedField>
    <summaryFilterItems>
        <field>Applicant__c.In_Active_Applicant__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Applicant__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>