ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/FOIR_Check_At_FinalTerms__c.field-meta.xml
<CustomField>
    <fullName>FOIR_Check_At_FinalTerms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOIR Check At FinalTerms</label>
    <type>Checkbox</type>
</CustomField>