ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funded</label>
    <type>Checkbox</type>
</CustomField>