ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Funding_on_Ex_Showroom__c.field-meta.xml
<CustomField>
    <fullName>Funding_on_Ex_Showroom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding on Ex-Showroom</label>
    <type>Checkbox</type>
</CustomField>