ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Funding_on_ORP__c.field-meta.xml
<CustomField>
    <fullName>Funding_on_ORP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding on ORP</label>
    <type>Checkbox</type>
</CustomField>