ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Gift_through_Dealer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_through_Dealer_Amount__c</fullName>
    <label>Gift through Dealer Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>