ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Grid_value__c.field-meta.xml
<CustomField>
    <fullName>Grid_value__c</fullName>
    <label>Grid value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>