ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Gross_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Invoice_Amount__c</fullName>
    <formula>IF (Vehicle_Type__c ==&apos;New&apos;, Basic_Price__c +  RTO_Road_Tax__c +  X1st_yr_Insurance_Premium__c + Other_charges__c + GST_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>