ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Gross_IRR__c.field-meta.xml
<CustomField>
    <fullName>Gross_IRR__c</fullName>
    <label>Gross IRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>