ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Gross_LTV__c.field-meta.xml
<CustomField>
    <fullName>Gross_LTV__c</fullName>
    <formula>IF( Vehicle_Type__c ==&apos;New&apos; &amp;&amp; ISPICKVAL(Product_Type__c,&quot;Passenger Vehicles&quot;), (Finance_Amount__c / LTV__c)*100,
IF( Vehicle_Type__c ==&apos;NEW&apos; &amp;&amp; ISPICKVAL(Product_Type__c,&quot;Two Wheeler&quot;),
(Finance_Amount__c /  Invoice__c)*100,
IF(Vehicle_Type__c ==&apos;Used&apos; &amp;&amp; ISPICKVAL(Product_Type__c,&quot;Passenger Vehicles&quot;),(Finance_Amount__c /  Basic_Price__c )*100,
IF(Vehicle_Type__c ==&apos;Used&apos; &amp;&amp; ISPICKVAL(Product_Type__c,&quot;Two Wheeler&quot;),
(Finance_Amount__c /  Basic_Price__c )*100,
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>