ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Hero_Disbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>Hero_Disbursed_Date__c</fullName>
    <label>Hero_Disbursed_Date</label>
    <type>DateTime</type>
</CustomField>