ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Hero_IsDisbursed__c.field-meta.xml
<CustomField>
    <fullName>Hero_IsDisbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disbursed?</label>
    <type>Checkbox</type>
</CustomField>