ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Hold_Cam_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Hold_Cam_Remarks__c</fullName>
    <label>Hold Cam Remarks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>