ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Hold_Cam_Status__c.field-meta.xml
<CustomField>
    <fullName>Hold_Cam_Status__c</fullName>
    <label>Hold Cam Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>