ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Holiday_period__c.field-meta.xml
<CustomField>
    <fullName>Holiday_period__c</fullName>
    <label>Holiday period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>