ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Hunter_APS_Response__c.field-meta.xml
<CustomField>
    <fullName>Hunter_APS_Response__c</fullName>
    <label>Hunter APS Response</label>
    <length>25</length>
    <type>Text</type>
</CustomField>