ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Hunter_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Hunter_Match_Status__c</fullName>
    <label>Hunter Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>