ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBB_Internal_API_FLAG__c.field-meta.xml
<CustomField>
    <fullName>IBB_Internal_API_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IBB Internal API FLAG</label>
    <type>Checkbox</type>
</CustomField>