ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Disbursement_Date_Test__c.field-meta.xml
<CustomField>
    <fullName>IBL_Disbursement_Date_Test__c</fullName>
    <label>IBL Disbursement Date Test</label>
    <type>Date</type>
</CustomField>