ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Hub__c.field-meta.xml
<CustomField>
    <fullName>IBL_Hub__c</fullName>
    <formula>Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBL Hub</label>
    <type>Text</type>
</CustomField>