ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Month_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>IBL_Month_Disbursement_Date__c</fullName>
    <formula>CASE(MONTH(IBL_Disbursement_Date_Test__c), 1, &quot;1Jan&quot; ,  2, &quot;2Feb&quot; , 3 , &quot;3Mar&quot; , 4 , &quot;4Apr&quot; , 5 , &quot;5May&quot; , 6 , &quot;6Jun&quot; , 7 , &quot;7Jul&quot; , 8 , &quot;8Aug&quot; , 9 , &quot;9Sep&quot; , 10 , &quot;10Oct&quot;, 11 , &quot;11Nov&quot; , &quot;12Dec&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBL Month Disbursement Date</label>
    <type>Text</type>
</CustomField>