ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Region__c.field-meta.xml
<CustomField>
    <fullName>IBL_Region__c</fullName>
    <formula>Account.Parent.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBL Region</label>
    <type>Text</type>
</CustomField>