ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Role__c.field-meta.xml
<CustomField>
    <fullName>IBL_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBL Role</label>
    <type>Text</type>
</CustomField>