ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Year_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>IBL_Year_Disbursement_Date__c</fullName>
    <formula>YEAR( IBL_Disbursement_Date_Test__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBL Year Disbursement Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>