ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IBL_Zone__c.field-meta.xml
<CustomField>
    <fullName>IBL_Zone__c</fullName>
    <formula>Account.Parent.Parent.Parent.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBL Zone</label>
    <type>Text</type>
</CustomField>