ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IModuleId__c.field-meta.xml
<CustomField>
    <fullName>IModuleId__c</fullName>
    <label>IModuleId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>