ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IND_CarWale_Response__c.field-meta.xml
<CustomField>
    <fullName>IND_CarWale_Response__c</fullName>
    <description>This field is to capture full response from Carwale API</description>
    <label>CarWale Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>