ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IND_DSA_Name__c.field-meta.xml
<CustomField>
    <fullName>IND_DSA_Name__c</fullName>
    <formula>CreatedBy.FirstName + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSA Name</label>
    <type>Text</type>
</CustomField>