ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IND_Not_Provided_Documents__c.field-meta.xml
<CustomField>
    <fullName>IND_Not_Provided_Documents__c</fullName>
    <label>Not Provided Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>