ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Installment_type__c.field-meta.xml
<CustomField>
    <fullName>Installment_type__c</fullName>
    <label>Installment type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equated</fullName>
            </value>
            <value>
                <fullName>Structured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>