ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurance_business_done_by__c.field-meta.xml
<CustomField>
    <fullName>Insurance_business_done_by__c</fullName>
    <label>Insurance business done by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>