ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurance_declared_value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_declared_value__c</fullName>
    <label>Insurance declared value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>