ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurance_expiring_within_90_days__c.field-meta.xml
<CustomField>
    <fullName>Insurance_expiring_within_90_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance expiring within 90 days</label>
    <type>Checkbox</type>
</CustomField>