ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurance_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry_date__c</fullName>
    <label>Insurance Expiry date</label>
    <type>Date</type>
</CustomField>