ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurance_Issuance_date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Issuance_date__c</fullName>
    <label>Insurance  Issuance date</label>
    <type>Date</type>
</CustomField>