ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurance_number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_number__c</fullName>
    <label>Insurance number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>