ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Insurer_name__c.field-meta.xml
<CustomField>
    <fullName>Insurer_name__c</fullName>
    <label>Insurer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>