ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Invalid_Dedupe_CB_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Dedupe_CB_Customer_Code__c</fullName>
    <label>Invalid Dedupe CB Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>