ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <formula>IF( Vehicle_Type__c ==&apos;NEW&apos; &amp;&amp;  ISPICKVAL(Product_Type__c,&quot;Passenger Vehicles&quot;), Basic_Price__c +  RTO_Road_Tax__c +  X1st_yr_Insurance_Premium__c +  Other_charges__c +  GST_Amount__c -  Discount_on_Basic_Price__c ,IF(Vehicle_Type__c ==&apos;NEW&apos; &amp;&amp; ISPICKVAL(Product_Type__c,&quot;Two Wheeler&quot;), LTV__c +  Total_Funded_Premium__c ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>