ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IO_Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>IO_Loan_amount__c</fullName>
    <label>IO Loan Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>