ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IO_On_Road_Price__c.field-meta.xml
<CustomField>
    <fullName>IO_On_Road_Price__c</fullName>
    <description>D2C field to store initial offer on road price</description>
    <label>IO On Road Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>