ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IO_Required_ROI__c.field-meta.xml
<CustomField>
    <fullName>IO_Required_ROI__c</fullName>
    <label>IO Required ROI</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>