ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IO_Vehicle_Pincode__c.field-meta.xml
<CustomField>
    <fullName>IO_Vehicle_Pincode__c</fullName>
    <label>IO Vehicle Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>