ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_Customer_Dedupe_Submit__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Dedupe_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Dedupe Submit</label>
    <type>Checkbox</type>
</CustomField>