ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_customer_interested_in_a_motor_insura__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_interested_in_a_motor_insura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is customer interested in a motor insura</label>
    <type>Checkbox</type>
</CustomField>