ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_ETB__c.field-meta.xml
<CustomField>
    <fullName>Is_ETB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ETB</label>
    <type>Checkbox</type>
</CustomField>