ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_Exiting_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Exiting_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exiting Customer</label>
    <type>Checkbox</type>
</CustomField>