ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_Loan_Details_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan_Details_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Loan Details Submitted</label>
    <type>Checkbox</type>
</CustomField>