ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_Mobile_Journey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_Journey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mobile Journey Completed</label>
    <type>Checkbox</type>
</CustomField>