ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Is_Pre_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pre Approved?</label>
    <type>Checkbox</type>
</CustomField>