ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IsExposureAPITriggered__c.field-meta.xml
<CustomField>
    <fullName>IsExposureAPITriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExposureAPITriggered</label>
    <type>Checkbox</type>
</CustomField>