ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/isOfflineApplication__c.field-meta.xml
<CustomField>
    <fullName>isOfflineApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOfflineApplication</label>
    <type>Checkbox</type>
</CustomField>