ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/isParentLeadMoreThan30or90Days__c.field-meta.xml
<CustomField>
    <fullName>isParentLeadMoreThan30or90Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isParentLeadMoreThan30or90Days</label>
    <type>Checkbox</type>
</CustomField>