ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/isPRSubmittedbyBE__c.field-meta.xml
<CustomField>
    <fullName>isPRSubmittedbyBE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPRSubmittedbyBE</label>
    <type>Checkbox</type>
</CustomField>