ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IsReferenceAndRelationApiCalled__c.field-meta.xml
<CustomField>
    <fullName>IsReferenceAndRelationApiCalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReferenceAndRelationApiCalled</label>
    <type>Checkbox</type>
</CustomField>