ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/IsRejected__c.field-meta.xml
<CustomField>
    <fullName>IsRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected?</label>
    <type>Checkbox</type>
</CustomField>