ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/isTopUpLoan__c.field-meta.xml
<CustomField>
    <fullName>isTopUpLoan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTopUpLoan</label>
    <type>Checkbox</type>
</CustomField>