ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Journey_Restart_Reason__c.field-meta.xml
<CustomField>
    <fullName>Journey_Restart_Reason__c</fullName>
    <label>Journey Restart Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>