ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status__c</fullName>
    <label>Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non STP</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>