ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/JourneyStopScenarioFound__c.field-meta.xml
<CustomField>
    <fullName>JourneyStopScenarioFound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JourneyStopScenarioFound</label>
    <type>Checkbox</type>
</CustomField>