ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/KFS_URL__c.field-meta.xml
<CustomField>
    <fullName>KFS_URL__c</fullName>
    <label>KFS URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>