ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Last_Completed_Module__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Module__c</fullName>
    <label>Last Completed Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>